tests/saks/should_fail/saks_fail025.hs
{-# LANGUAGE StandaloneKindSignatures #-}

module SAKS_Fail024 where

import Data.Kind (Type)

type A, B, C :: Type

data A
data B
data C
